// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen transactions config import-export] should create the transactions: the transactions have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ transaction [name: 'cfgObjectTest', type: 'calldata', tenant: 'Environment']
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen transactions config import-export] should skip the same transactions: the transactions have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= transaction [name: 'cfgObjectTest', type: 'calldata', tenant: 'Environment']
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen transactions config import-export] should throw exception when new transactions to import miss mandatory properties transactions: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - transaction [name: 'emptyCfgObjectTest', type: 'callData', tenant: 'Environment']:
    - alias
",
  "stdout": "",
}
`;

exports[`[mutagen transactions config import-export] should update the modified transactions: the modified transactions have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ transaction [name: 'cfgObjectTest', type: 'callData', tenant: 'Environment']
Completed. 1 object(s) imported.
",
}
`;
